test/files/neg/t5753/Impls_Macros_1.scala
import scala.reflect.macros.{Context => Ctx}

trait Impls {
def impl(c: Ctx)(x: c.Expr[Any]) = x
}

